--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 group = 'org.enginehub'
-version = '1.0'
+version = '1.1'
 archivesBaseName = 'FAWEUtils'
 
 minecraft {
@@ -41,7 +41,6 @@ minecraft {
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version:'2.3.1'
-    compile group: 'org.beanshell', name: 'bsh', version:'2.0b5'
 }
 
 processResources {
@@ -68,9 +67,8 @@ processResources {
 
 shadowJar {
     dependencies {
-        include(dependency('org.beanshell:bsh'))
-        relocate('bsh', 'org.enginehub.util.bsh')
         exclude 'net/minecraftforge/**'
+        exclude 'dummyThing'
         exclude 'Gradle*'
         exclude '.cache'
     }
